--- a/public/index.html
+++ b/public/index.html
@@ -85,14 +85,17 @@
 
       async fetchTodaysContent(){
         try{
-          const response=await fetch('/api/fetch-news');
+          const bust = `ts=${Date.now()}`;
+          const response=await fetch(`/api/fetch-news?${bust}`, { cache: 'no-store' });
           if(!response.ok) throw new Error(`HTTP ${response.status}`);
           const data=await response.json();
-          if(data.articles){
+          if(Array.isArray(data.articles) && data.articles.length > 0){
             this.articles=data.articles.slice(0,6);
             if(data.edition_info) this.updateEditionInfo(data.edition_info);
             this.displayArticles();
-          } else { throw new Error('No articles'); }
+          } else { 
+            document.getElementById('loading').innerHTML='No policy stories today.';
+          }
         }catch(e){
           console.error('Error fetching articles:',e);
           document.getElementById('loading').innerHTML='Unable to load today's analysis. Please refresh.';
@@ -100,9 +103,9 @@
       }
 
       updateEditionInfo(editionInfo){
-        const today=new Date();
+        const d = new Date(editionInfo.date || editionInfo.edition_date);
         const options={weekday:'long',year:'numeric',month:'long',day:'numeric'};
-        const dateStr=today.toLocaleDateString('en-US',options);
+        const dateStr = isNaN(d) ? new Date().toLocaleDateString('en-US', options) : d.toLocaleDateString('en-US', options);
         const statusText=editionInfo.is_automated ? (editionInfo.is_today ? '' : ' (Latest Edition)') : ' (Live Updates)';
         document.getElementById('edition-info').textContent=`${dateStr} • Issue #${editionInfo.issue_number}${statusText}`;
       }
@@ -110,7 +113,10 @@
       displayArticles(){
         const container=document.getElementById('articles-container');
         const loading=document.getElementById('loading');
-        if(this.articles.length===0){ loading.innerHTML='No policy stories today.'; return; }
+        if(!Array.isArray(this.articles) || this.articles.length===0){ 
+          loading.innerHTML='No policy stories today.'; 
+          return; 
+        }
         loading.style.display='none'; container.style.display='block';
         container.innerHTML=this.articles.map((a,i)=>this.createArticleHTML(a,i)).join('');
         for(let i=0;i<this.articles.length;i++){
@@ -133,7 +139,7 @@
           </div>
           <div class="article-content">
             <div class="article-meta">
-              <span>${this.escapeHtml(article.source?.name||'News Source')} • ${timeAgo}</span>
+              <span>${this.escapeHtml(article.source && article.source.name ? article.source.name : 'News Source')} • ${timeAgo}</span>
               <a href="${article.url}" class="read-full" target="_blank" onclick="event.stopPropagation()">Read full story →</a>
             </div>
             <h3 class="article-title">${this.escapeHtml(cleanTitle)}</h3>
@@ -173,7 +179,8 @@
         const a=this.articles[i]; const el=document.getElementById(`analysis-content-${i}`); if(!a||!el) return;
         el.innerHTML=`<div style="color:#64748b;font-style:italic">Analyzing…</div>`;
         try{
-          const res=await fetch('/api/personalize',{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({article:a})});
+          const bust = `ts=${Date.now()}`;
+          const res=await fetch(`/api/personalize?${bust}`,{method:'POST',headers:{'Content-Type':'application/json'},body:JSON.stringify({article:a}), cache: 'no-store'});
           if(!res.ok) throw new Error(`HTTP ${res.status}`);
           const data=await res.json();
           el.innerHTML=this.renderAnalysisBlock(data);
@@ -201,9 +208,10 @@
       }
 
       extractKeyInsight(a,structured){
-        if(structured?.takeaway) return structured.takeaway;
+        if(structured && structured.takeaway) return structured.takeaway;
         const s=(a||'').split('. ');
-        return s.find(x=>x.length>50)?.trim()+'.' || (a||'').substring(0,100)+'...';
+        const found = s.find(x=>x.length>50);
+        return found ? found.trim()+'.' : (a||'').substring(0,100)+'...';
       }
 
       cleanTitle(t){ if(!t) return ''; return t.replace(/^(BREAKING|LIVE|UPDATE|ALERT):\s*/i,''); }
