--- a/public/admin.html
+++ b/public/admin.html
@@ -93,7 +93,7 @@
             border: 1px solid #e5e7eb; 
             border-radius: 8px; 
             overflow: hidden;
-            transition: shadow 0.2s;
+            transition: box-shadow 0.2s;
         }
         .article-card:hover { box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         
@@ -520,6 +520,8 @@
                     this.addLog('error', 'Failed to load public data: ' + error.message);
                 }
             }
+
+            renderArticles() {
                 const grid = document.getElementById('articles-grid');
                 grid.innerHTML = this.articles.map((article, index) => `
                     <div class="article-card">
@@ -888,6 +890,9 @@
             adminPanel = new AdminPanel();
             adminPanel.populateSettingsForm();
         });
+
+        // Bind modal saveAnalysis globally for the modal button
+        window.saveAnalysis = function() { adminPanel.saveAnalysis(); };
     </script>
 </body>
 </html>
