--- a/public/admin.html
+++ b/public/admin.html
@@ -364,6 +364,8 @@
         </div>
 
         <div id="logs-panel" class="panel">
+
+        <div id="logs-panel" class="panel">
             <div style="margin-bottom: 12px;">
                 <button class="btn btn-secondary btn-small" onclick="refreshLogs()">🔄 Refresh</button>
                 <button class="btn btn-secondary btn-small" onclick="clearLogs()">🗑️ Clear</button>
