--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
   <header class="masthead">
     <div class="wrap">
       <h1 class="brand">How Does This Affect Me?</h1>
-      <p class="tagline">Clear, practical impact from today's policy news</p>
+      <p class="tagline">The human story behind today's headlines</p>
       <div class="edition-info" id="edition-info">Loading...</div>
     </div>
   </header>
