--- a/public/index.html
+++ b/public/index.html
@@ -119,13 +119,9 @@
         loading.style.display='none'; container.style.display='block';
         container.innerHTML=this.articles.map((a,i)=>this.createArticleHTML(a,i)).join('');
         
-        // show pre-generated analysis from DB
+        // Fill sections for each article
         for(let i=0;i<this.articles.length;i++){
-          if(this.articles[i].preGeneratedAnalysis){ 
-            this.showPreGeneratedAnalysis(i); 
-          } else {
-            this.showNoAnalysisMessage(i);
-          }
+          this.showPreGeneratedAnalysis(i);
         }
       }
 
@@ -133,7 +129,8 @@
         const timeAgo=this.getTimeAgo(article.publishedAt);
         const cleanTitle=this.cleanTitle(article.title);
         return `
-        <article class="article-item" onclick="window.open('${article.url}','_blank')">
+        <!-- FIX: add anchor id so #story-${index} links work -->
+        <article id="story-${index}" class="article-item" onclick="window.open('${article.url}','_blank')">
           <div class="news-image">
             ${article.urlToImage||article.image ? `<img src="${article.urlToImage||article.image}" alt="News image" onerror="this.parentElement.innerHTML='📰'">` : '📰'}
           </div>
@@ -145,9 +142,16 @@
             <h3 class="article-title">${this.escapeHtml(cleanTitle)}</h3>
             <p class="article-summary">${this.escapeHtml(article.description||'')}</p>
 
+            <!-- Section 1: What's Happening Here? -->
+            <div class="analysis">
+              <div class="analysis-label">What's Happening Here?</div>
+              <div class="analysis-text" id="whats-happening-${index}"></div>
+            </div>
+
+            <!-- Section 2: How Does This Affect Me? -->
             <div class="analysis">
               <div class="analysis-label">How Does This Affect Me?</div>
-              <div class="analysis-text" id="analysis-content-${index}"></div>
+              <div class="analysis-text" id="affects-me-${index}"></div>
             </div>
 
             <div class="social-sharing">
@@ -166,59 +170,82 @@
         </article>`;
       }
 
-      // === NEW: two-section parser that matches the backend ===
-      splitTwoSections(markdown){
-        const txt=(markdown||'').replace(/\r/g,'');
-        const m1=/^###\s*What(?:'|’)?s Happening Here\?\s*([\s\S]*?)(?=^###\s*How Does This Affect Me\?\s*|$)/im.exec(txt);
-        const m2=/^###\s*How Does This Affect Me\?\s*([\s\S]*)$/im.exec(txt);
-        return {
-          whats: (m1?.[1]||'').trim(),
-          affect: (m2?.[1]||'').trim()
-        };
-      }
-
       showPreGeneratedAnalysis(i){
         const a=this.articles[i];
-        const el=document.getElementById(`analysis-content-${i}`);
-        if(!el) return;
+        const elWhat=document.getElementById(`whats-happening-${i}`);
+        const elAffect=document.getElementById(`affects-me-${i}`);
 
-        const { whats, affect } = this.splitTwoSections(a.preGeneratedAnalysis||'');
+        // Prefer structured fields from backend if present
+        let whats = a.whatsHappening || a.whats_happening || '';
+        let affect = a.affectsMe || a.affects_me || '';
 
-        if(whats || affect){
-          // render with both sections if present
-          let html='';
-          if(whats){
-            html += `<div style="margin-bottom:16px;"><strong>What's Happening Here?</strong><br>${this.escapeHtml(whats)}</div>`;
-          }
-          if(affect){
-            html += `<div style="margin-bottom:8px;"><strong>How Does This Affect Me?</strong><br>${this.escapeHtml(affect)}</div>`;
-          }
-          el.innerHTML = html;
-          this.sharingData[i] = {
-            article: a,
-            analysis: this.extractKeyInsight(affect || whats, null),
-            url: `${window.location.origin}#story-${i}`
-          };
-          return;
+        // Fallback: parse the single preGeneratedAnalysis into two sections
+        if ((!whats || !affect) && a.preGeneratedAnalysis) {
+          const { whatsHappening, affectsMe } = this.splitTwoSections(a.preGeneratedAnalysis);
+          whats = whats || whatsHappening;
+          affect = affect || affectsMe;
         }
 
-        // fallback: no headers, format as paragraphs
-        const formatted=this.formatAnalysis(a.preGeneratedAnalysis);
-        el.innerHTML=formatted;
-        this.sharingData[i]={article:a,analysis:this.extractKeyInsight(a.preGeneratedAnalysis,null),url:`${window.location.origin}#story-${i}`};
-      }
-
-      // kept for fallback only
-      formatAnalysis(t){ 
-        return (t||'').split('\n\n').filter(p=>p.trim()).map(p=>`<p>${this.escapeHtml(p.trim())}</p>`).join(''); 
-      }
-
-      showNoAnalysisMessage(i){
-        const el=document.getElementById(`analysis-content-${i}`);
-        if(el){
-          el.innerHTML='<div class="no-analysis">Analysis coming soon - check back for updates to this story.</div>';
-          this.sharingData[i]={article:this.articles[i],analysis:'Analysis coming soon',url:`${window.location.origin}#story-${i}`};
+        // Render with graceful fallback
+        if (elWhat) {
+          elWhat.innerHTML = whats
+            ? this.formatAnalysis(whats)
+            : '<div class="no-analysis">Context loading — check back for the quick summary.</div>';
         }
+        if (elAffect) {
+          elAffect.innerHTML = affect
+            ? this.formatAnalysis(affect)
+            : '<div class="no-analysis">Impact details coming soon — we’re updating this story.</div>';
+        }
+
+        // Share text uses “affects me” if available, else “what’s happening”
+        const shareText = (affect && affect.trim()) || (whats && whats.trim()) || 'Analysis coming soon';
+        this.sharingData[i]={article:a,analysis:this.extractKeyInsight(shareText,null),url:`${window.location.origin}#story-${i}`};
+      }
+
+      // Split into the two H3 sections (supports both H3 and ALL-CAPS headers)
+      splitTwoSections(text){
+        const cleaned = (text||'').replace(/\r/g,'').trim();
+        if(!cleaned) return { whatsHappening:'', affectsMe:'' };
+
+        // Primary: H3 headers
+        const h1 = /(?:^|\n)###\s*What'?s Happening Here\?\s*([\s\S]*?)(?=(?:^|\n)###\s*How Does This Affect Me\?|$)/i.exec(cleaned);
+        const h2 = /(?:^|\n)###\s*How Does This Affect Me\?\s*([\s\S]*)$/i.exec(cleaned);
+
+        let whats = (h1?.[1]||'').trim();
+        let affect = (h2?.[1]||'').trim();
+
+        if(!whats || !affect){
+          // FIX: make ALL-CAPS fallback match "WHAT'S HAPPENING HERE" exactly
+          const up = cleaned.toUpperCase();
+          const H1 = "WHAT'S HAPPENING HERE";
+          const H2 = "HOW DOES THIS AFFECT ME";
+          const a1 = up.indexOf(H1);
+          const a2 = up.indexOf(H2);
+          if(a1 !== -1 && a2 !== -1 && a2 > a1){
+            whats = cleaned.slice(a1 + H1.length, a2).trim();
+            affect = cleaned.slice(a2 + H2.length).trim();
+          }
+        }
+
+        return { whatsHappening: whats, affectsMe: affect };
+      }
+
+      // Unchanged helpers you had
+      renderAnalysisBlock(data){
+        const parts=[];
+        if(data.takeaway){ parts.push(`<p class="takeaway">${this.escapeHtml(data.takeaway)}</p>`); }
+        if(Array.isArray(data.facts)&&data.facts.length){
+          const items=data.facts.slice(0,3).map(f=>`<li>${this.escapeHtml(f)}</li>`).join('');
+          parts.push(`<ol class="facts">${items}</ol>`);
+        }
+        if(data.impact){ parts.push(this.formatAnalysis(data.impact)); }
+        const footer=[];
+        if(data.winners) footer.push(`<span><strong>Winners:</strong> ${this.escapeHtml(data.winners)}</span>`);
+        if(data.losers) footer.push(`<span><strong>Losers:</strong> ${this.escapeHtml(data.losers)}</span>`);
+        if(data.watch_next) footer.push(`<span><strong>Watch next:</strong> ${this.escapeHtml(data.watch_next)}</span>`);
+        if(footer.length){ parts.push(`<div class="impact-footer">${footer.join('')}</div>`); }
+        return parts.join('');
       }
 
       extractKeyInsight(a,structured){
@@ -238,6 +265,10 @@
 
       escapeHtml(t){ if(!t) return ''; const d=document.createElement('div'); d.textContent=t; return d.innerHTML; }
 
+      // Keep your paragraph formatting
+      formatAnalysis(t){ return (t||'').split('\n\n').filter(p=>p.trim()).map(p=>`<p>${this.escapeHtml(p.trim())}</p>`).join(''); }
+
+      // Share + copy controls (unchanged)
       shareToTwitter(i){
         const d=this.sharingData[i]; if(!d) return;
         const text=`How Does This Affect Me: "${d.analysis}" Read more: ${d.url}`;
