--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
   <header class="masthead">
     <div class="wrap">
       <h1 class="brand">How Does This Affect Me?</h1>
-      <p class="tagline">Clear, practical impact from today's policy news</p>
+      <p class="tagline">Beyond the headlines: How news shapes your world</p>
       <div class="edition-info" id="edition-info">Loading...</div>
     </div>
   </header>
@@ -205,7 +205,7 @@
           // Fallback to old format for articles without structured sections
           container.innerHTML = `
             <div class="analysis-section">
-              <div class="analysis-label">How Does This Affect Me?</div>
+              <div class="analysis-label">What's Happening Here?</div>
               <div class="analysis-text">${this.formatAnalysisText(article.preGeneratedAnalysis)}</div>
             </div>
           `;
@@ -220,7 +220,7 @@
           // No analysis available
           container.innerHTML = `
             <div class="analysis-section">
-              <div class="analysis-label">How Does This Affect Me?</div>
+              <div class="analysis-label">What's Happening Here?</div>
               <div class="analysis-text">
                 <div class="no-analysis">Analysis coming soon - check back for updates to this story.</div>
               </div>
