--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>How Does This Affect Me?</title>
+  <title>How the News Affects You</title>
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='48' fill='black'/><text x='50%' y='60%' text-anchor='middle' font-size='42' fill='white' font-family='system-ui'>HD</text></svg>">
   <style>
     *{margin:0;padding:0;box-sizing:border-box}
@@ -60,8 +60,8 @@
 <body>
   <header class="masthead">
     <div class="wrap">
-      <h1 class="brand">How Does This Affect Me?</h1>
-      <p class="tagline">Beyond the headlines: How news shapes your world</p>
+      <h1 class="brand">How the News Affects You</h1>
+      <p class="tagline">Form headline to real life</p>
       <div class="edition-info" id="edition-info">Loading...</div>
     </div>
   </header>
