--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,15 @@
     @keyframes spin{0%{transform:rotate(0)}100%{transform:rotate(360deg)}}
 
     .no-analysis{color:#64748b;font-style:italic;padding:12px;background:#f8f9fa;border-radius:6px}
+
+    .newsletter-signup{background:#fff;margin-top:32px;padding:24px 0;border-top:1px solid #e5e5e5}
+    .signup-container{text-align:center;max-width:400px;margin:0 auto}
+    .signup-title{font-size:18px;font-weight:700;color:#111;margin-bottom:8px;line-height:1.3}
+    .signup-form{margin-top:16px;display:flex;gap:8px;flex-wrap:wrap;justify-content:center}
+    .signup-email{flex:1;min-width:200px;padding:12px;border:1px solid #d1d5db;border-radius:6px;font-size:16px;font-family:inherit}
+    .signup-btn{background:#0ea5e9;color:#fff;padding:12px 20px;border:none;border-radius:6px;font-size:16px;font-weight:600;cursor:pointer;white-space:nowrap}
+    .signup-btn:hover{background:#0284c7}
+    .signup-btn:disabled{background:#9ca3af;cursor:not-allowed}
   </style>
 </head>
 <body>
@@ -61,6 +70,23 @@
         Loading today's analysis...
       </div>
       <div class="articles-list" id="articles-container" style="display:none"></div>
+    </div>
+
+    <div class="newsletter-signup">
+      <div class="wrap">
+        <div class="signup-container">
+          <h3 class="signup-title">See How the News Affects You Every Morning</h3>
+          <form class="signup-form" onsubmit="return false;">
+            <input 
+              type="email" 
+              class="signup-email"
+              placeholder="Enter your email"
+              required
+            >
+            <button type="submit" class="signup-btn">Subscribe</button>
+          </form>
+        </div>
+      </div>
     </div>
   </main>
 
