--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,9 @@
     .signup-btn{background:#0ea5e9;color:#fff;padding:12px 20px;border:none;border-radius:6px;font-size:16px;font-weight:600;cursor:pointer;white-space:nowrap}
     .signup-btn:hover{background:#0284c7}
     .signup-btn:disabled{background:#9ca3af;cursor:not-allowed}
+
+    .footer{background:#fafafa;padding:20px 0;border-top:1px solid #e5e5e5;margin-top:20px}
+    .footer-text{text-align:center;font-size:12px;color:#6b7280;font-family:system-ui,-apple-system,sans-serif}
   </style>
 </head>
 <body>
@@ -89,6 +92,12 @@
       </div>
     </div>
   </main>
+
+  <footer class="footer">
+    <div class="wrap">
+      <div class="footer-text">© 2025 How the News Affects You™. All rights reserved.</div>
+    </div>
+  </footer>
 
   <script>
     class DailyNewsletterSite {
