--- a/public/index.html
+++ b/public/index.html
@@ -44,14 +44,14 @@
 
     .no-analysis{color:#64748b;font-style:italic;padding:12px;background:#f8f9fa;border-radius:6px}
 
-    .newsletter-signup{background:#fff;margin-top:32px;padding:24px 0;border-top:1px solid #e5e5e5}
+    .newsletter-signup{background:#1f2937;margin-top:32px;padding:32px 0;border-top:1px solid #e5e5e5}
     .signup-container{text-align:center;max-width:400px;margin:0 auto}
-    .signup-title{font-size:18px;font-weight:700;color:#111;margin-bottom:8px;line-height:1.3}
+    .signup-title{font-size:18px;font-weight:700;color:#fff;margin-bottom:8px;line-height:1.3}
     .signup-form{margin-top:16px;display:flex;gap:8px;flex-wrap:wrap;justify-content:center}
-    .signup-email{flex:1;min-width:200px;padding:12px;border:1px solid #d1d5db;border-radius:6px;font-size:16px;font-family:inherit}
-    .signup-btn{background:#0ea5e9;color:#fff;padding:12px 20px;border:none;border-radius:6px;font-size:16px;font-weight:600;cursor:pointer;white-space:nowrap}
-    .signup-btn:hover{background:#0284c7}
-    .signup-btn:disabled{background:#9ca3af;cursor:not-allowed}
+    .signup-email{flex:1;min-width:200px;padding:12px;border:1px solid #d1d5db;border-radius:6px;font-size:16px;font-family:inherit;background:#fff}
+    .signup-btn{background:#fff;color:#1f2937;padding:12px 20px;border:none;border-radius:6px;font-size:16px;font-weight:600;cursor:pointer;white-space:nowrap;transition:all 0.2s ease}
+    .signup-btn:hover{background:#f3f4f6;transform:translateY(-1px)}
+    .signup-btn:disabled{background:#9ca3af;cursor:not-allowed;color:#fff}
 
     .footer{background:#fafafa;padding:20px 0;border-top:1px solid #e5e5e5;margin-top:20px}
     .footer-text{text-align:center;font-size:12px;color:#6b7280;font-family:system-ui,-apple-system,sans-serif}
