--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
     <div class="newsletter-signup">
       <div class="wrap">
         <div class="signup-container">
-          <h3 class="signup-title">See How the News Affects You Every Morning at 7am est</h3>
+          <h3 class="signup-title">See How the News Affects You Every Morning at 7am EST</h3>
           <form class="signup-form" onsubmit="return false;">
             <input 
               type="email" 
